Fix overflow-x on Safari

--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -5,6 +5,9 @@
   border-radius: 50%;
   color: $color-light;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   z-index: 1;
 
   &.large {
