--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,8 +7,14 @@
   box-sizing: border-box;
 }
 
+html{
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 body {
   position: relative;
+  overflow: hidden;
   margin: 0;
   padding: 0;
   background: $color-light;
@@ -18,7 +24,7 @@ body {
   line-height: 1.7;
   color: $color-text;
   letter-spacing: 0.5px;
-  overflow-x: hidden;
+
 
   @include p-el("before") {
     @extend%shape;
